<resources>
    <string name="search_hint_movies_and_tv">Search movies and TV Series…</string>
    <string name="search_filters_title">Filters</string>
    <string name="label_year">Year</string>
    <string name="label_release_date_gte">From date</string>
    <string name="label_release_date_lte">To date</string>
    <string name="label_first_air_date_year">First air date year</string>
    <string name="label_first_air_date_gte">First air date from</string>
    <string name="label_first_air_date_lte">First air date to</string>
    <string name="label_air_date_gte">Air date from</string>
    <string name="label_air_date_lte">Air date to</string>
    <string name="label_genres_include">Genres (include)</string>
    <string name="label_genres_exclude">Genres (exclude)</string>
    <string name="label_with_origin_country">Country of origin</string>
    <string name="label_with_original_language">Original language</string>
    <string name="label_vote_average_range">Rating (0–10)</string>
    <string name="label_vote_count_range">Vote count</string>
    <string name="label_sort_by">Sort by</string>
    <string name="action_reset">Reset</string>
    <string name="action_search">Search</string>
    <string name="empty_discover_list">The list is empty. Adjust filters and get results.</string>
    <string name="no_internet_connection_title">No internet connection</string>
    <string name="no_internet_connection_warning">You are currently offline. Search functionality is unavailable. Please check your internet connection to use search.</string>
    <string name="no_internet_message">Please check your internet connection and try again.</string>
    <string name="close">Close</string>
    <string name="loading_text">Loading…</string>
</resources>