<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label_year"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="1900"
            android:valueTo="2100"
            android:stepSize="1"
            style="@style/Widget.Material3.Slider"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_release_date_gte"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintEnabled="true"
                android:hint="@string/label_release_date_gte">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/release_date_gte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="12dp"
                android:layout_height="0dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_release_date_lte"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintEnabled="true"
                android:hint="@string/label_release_date_lte">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/release_date_lte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label_genres_include"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_include"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:singleSelection="false"
            app:singleLine="false"
            app:selectionRequired="false"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label_genres_exclude"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_exclude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:singleSelection="false"
            app:singleLine="false"
            app:selectionRequired="false"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_origin_country"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:hint="@string/label_with_origin_country"
            android:layout_marginBottom="8dp">

            <AutoCompleteTextView
                android:id="@+id/origin_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_original_language"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:hint="@string/label_with_original_language"
            android:layout_marginBottom="8dp">

            <AutoCompleteTextView
                android:id="@+id/original_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label_vote_average_range"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/vote_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:valueFrom="0"
            android:valueTo="10"
            android:stepSize="0.1"
            app:labelBehavior="visible"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label_vote_count_range"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/vote_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:valueFrom="0"
            android:valueTo="10000"
            android:stepSize="10"
            app:labelBehavior="visible"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_sort_by"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:hint="@string/label_sort_by"
            android:layout_marginBottom="8dp">

            <AutoCompleteTextView
                android:id="@+id/sort_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_reset"
                app:backgroundTint="@android:color/holo_red_dark"/>

            <Space
                android:layout_width="12dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_apply"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_search"/>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
